{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 49,
  "lineage": "4021766f-2d2f-7989-dec3-bf387b87fd71",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpc_test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ba3948f6c37a4b0",
            "arn": "arn:aws:ec2:us-west-1:378360623446:instance/i-0f5b0be4094340d96",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f5b0be4094340d96",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e9f473b095ae4bf1",
            "private_dns": "ip-10-0-1-223.us-west-1.compute.internal",
            "private_ip": "10.0.1.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0218115a7a0cd203e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e89dac8e89bfe380",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a3a63a9fee7e6491"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig_main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-082a532026470a917",
            "owner_id": "378360623446",
            "tags": {
              "Name": "ig-main"
            },
            "vpc_id": "vpc-0aa28246fe7888543"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ig_public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c958cc3c8f7bdffb",
            "owner_id": "378360623446",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082a532026470a917",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0aa28246fe7888543"
          },
          "dependencies": [
            "aws_internet_gateway.ig_main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ig_main_public_link",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be6c3db1486e44ca",
            "route_table_id": "rtb-0c958cc3c8f7bdffb",
            "subnet_id": "subnet-0e89dac8e89bfe380"
          },
          "dependencies": [
            "aws_internet_gateway.ig_main",
            "aws_route_table.ig_public_route",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:378360623446:security-group/sg-0a3a63a9fee7e6491",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3a63a9fee7e6491",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "378360623446",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0aa28246fe7888543"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:378360623446:subnet/subnet-0b353c4f8ef5375c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0b353c4f8ef5375c0",
            "map_public_ip_on_launch": false,
            "owner_id": "378360623446",
            "tags": {
              "Name": "main-vpc-private"
            },
            "vpc_id": "vpc-0aa28246fe7888543"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:378360623446:subnet/subnet-0e89dac8e89bfe380",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e89dac8e89bfe380",
            "map_public_ip_on_launch": true,
            "owner_id": "378360623446",
            "tags": {
              "Name": "main-vpc-public"
            },
            "vpc_id": "vpc-0aa28246fe7888543"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:378360623446:vpc/vpc-0aa28246fe7888543",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ec0f510367f4a52f",
            "default_route_table_id": "rtb-0ed0606e4ae442076",
            "default_security_group_id": "sg-033ce5a47d22cd9d7",
            "dhcp_options_id": "dopt-6d24340a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0aa28246fe7888543",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ed0606e4ae442076",
            "owner_id": "378360623446",
            "tags": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}